tests/snapshots/purity_parity/purity_parity__C__196_effect_row_subtract_unresolved_single_e419.snap
---
source: tests/purity_vm_jit_parity_snapshots.rs
---
Fixture: examples/type_system/failing/196_effect_row_subtract_unresolved_single_e419.flx
Category: C
Strict: false
Expect compile error: true

== vm command ==
$ flux --no-cache --no-strict examples/type_system/failing/196_effect_row_subtract_unresolved_single_e419.flx
exit_code: 1

== jit command ==
$ flux --no-cache --no-strict examples/type_system/failing/196_effect_row_subtract_unresolved_single_e419.flx --jit
exit_code: 1

== vm tuples ==
- E419 | Unresolved Effect Row | this call leaves an effect variable unconstrained

== jit tuples ==
- E419 | Unresolved Effect Row | this call leaves an effect variable unconstrained

== parity ==
match

== mismatch_debug ==
<none>
