tests/snapshots/purity_parity/purity_parity__C__199_effect_row_subset_ordered_missing_e422.snap
---
source: tests/purity_vm_jit_parity_snapshots.rs
---
Fixture: examples/type_system/failing/199_effect_row_subset_ordered_missing_e422.flx
Category: C
Strict: false
Expect compile error: true

== vm command ==
$ flux --no-cache examples/type_system/failing/199_effect_row_subset_ordered_missing_e422.flx
exit_code: 1

== jit command ==
$ flux --no-cache examples/type_system/failing/199_effect_row_subset_ordered_missing_e422.flx --jit
exit_code: 1

== vm tuples ==
- E422 | UNSATISFIED EFFECT SUBSET | effect row constraint failed
- E300 | TYPE UNIFICATION ERROR | parameter 1: expected `() -> Unit with IO, Time`, found `() -> Unit`

== jit tuples ==
- E422 | UNSATISFIED EFFECT SUBSET | effect row constraint failed
- E300 | TYPE UNIFICATION ERROR | parameter 1: expected `() -> Unit with IO, Time`, found `() -> Unit`

== parity ==
match

== mismatch_debug ==
<none>
