tests/snapshots/purity_parity/purity_parity__C__45_effect_row_subtract_missing_io.snap
---
source: tests/purity_vm_jit_parity_snapshots.rs
---
Fixture: examples/type_system/failing/45_effect_row_subtract_missing_io.flx
Category: C
Strict: false
Expect compile error: true

== vm command ==
$ flux --no-cache --no-strict examples/type_system/failing/45_effect_row_subtract_missing_io.flx
exit_code: 1

== jit command ==
$ flux --no-cache --no-strict examples/type_system/failing/45_effect_row_subtract_missing_io.flx --jit
exit_code: 1

== vm tuples ==
- E400 | Missing Ambient Effect | effectful call occurs here

== jit tuples ==
- E400 | Missing Ambient Effect | effectful call occurs here

== parity ==
match

== mismatch_debug ==
<none>
